<resources>
    <string name="app_name">Gompei Clicker</string>
    <string name="tab_text_1">Game</string>
    <string name="tab_text_2">Shop</string>
    <string name="start_game">Start Game</string>
    <string name="game_title">Gompei Clicker</string>
    <string name="settings">Settings</string>
    <string name="save_settings">Save Settings</string>
    <string name="points_name">Innovation Points</string>
    <string name="mascot_name">Gompei The Goat</string>
    <string name="default_point_value">0</string>
    <string name="powerup_1">Hay For Gompei</string>
    <string name="powerup_1_desc">Gompei eats some hay! He has a full stomach and earns 1.25x the Innovation Bucks.</string>
    <string name="powerup_2_desc">Gompei eats a sugar cube! He is now hyperactive and earn 1.25 the Innovation Points.</string>
    <string name="powerup_3_desc">Gompei gets an education! He knows more about innovation now and will .</string>
    <string name="powerup_4_desc">Gompei takes a study break! He is relaxing from finals and will.</string>
    <string name="powerup_2">Sugar Cube</string>
    <string name="powerup_3">Education</string>
    <string name="powerup_4">Study Break</string>
    <string name="background_image">background image</string>
    <string name="music">Music</string>
    <string name="delete_save">Erase save data?</string>
    <string name="language">language</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="japanese">日本</string>
    <string name="korean">한국인</string>
    <string name="upgrade_name_default">defaultUpgrade</string>
    <string name="upgrade_description_default">defaultUpgradeDescription</string>
    <string name="upgrade_cost_default">0</string>
    <string name="upgrade_purchased">Purchased!</string>
</resources>