<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/powerup_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/meltamogus"
                android:clickable="false"
                android:scaleType="fitXY"/>
            <View
                android:layout_width="10dp"
                android:layout_height="1dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:clickable="false"
                    android:text="@string/powerup_1" />
                <TextView
                    android:id="@+id/powerup_1_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:clickable="false"
                    android:text="@string/powerup_1_desc" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/powerup_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/meltamogus"
                android:scaleType="fitXY"/>
            <View
                android:layout_width="10dp"
                android:layout_height="1dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:clickable="false"
                    android:text="@string/powerup_2" />
                <TextView
                    android:id="@+id/powerup_2_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:clickable="false"
                    android:text="@string/powerup_2_desc" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">
            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/meltamogus"
                android:scaleType="fitXY"/>

            <View
                android:layout_width="10dp"
                android:layout_height="1dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:clickable="false"
                    android:text="@string/powerup_3" />
                <TextView
                    android:id="@+id/powerup_3_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:clickable="false"
                    android:text="@string/powerup_3_desc" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/meltamogus"
                android:scaleType="fitXY" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:clickable="false"
                    android:text="@string/powerup_4" />
                <TextView
                    android:id="@+id/powerup_4_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:clickable="false"
                    android:text="@string/powerup_4_desc" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>