<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/powerup_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="false"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/meltamogus" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upgrade_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/upgrade_name_default"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/upgrade_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/upgrade_cost_default" />
            </LinearLayout>

            <TextView
                android:id="@+id/upgrade_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/upgrade_description_default"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>